--- a/style/index.css
+++ b/style/index.css
@@ -1,21 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Eczar&family=Gentium+Basic&display=swap');
 
-div.container {
+/* div.container {
     width: 720px;
     margin: 0 auto;
-}
+} */
 
 h1, h2 {
     font-family: 'Eczar';
 }
 
-h1 {
+
+/* h1 {
+    width: 450px;
     font-size: 42.97px;
 }
 
 h2 {
     font-size: 27.5px;
-}
+} */
 
 p {
     font-family: 'Gentium Basic';
@@ -24,7 +26,7 @@ p {
 }
 
 
-img.image-wrap-left {
+/* img.image-wrap-left {
     float: left;
     width: 280px;
     margin: 6px 24px 6px 0px;
@@ -34,4 +36,4 @@ img.image-wrap-right {
     float: right;
     width: 280px;
     margin: 6px 0px 6px 24px;
-}
+} */
