margins and images

--- a/style/index.css
+++ b/style/index.css
@@ -24,11 +24,6 @@ h2 {
     font-size: 30px;
 }
 
-
-
-
-/*
-
 img.image-wrap-left {
     float: left;
     width: 280px;
@@ -39,4 +34,4 @@ img.image-wrap-right {
     float: right;
     width: 280px;
     margin: 6px 0px 6px 24px;
-} */
+}
